# law_rag

./: .env.blank  .gitignore  docker-compose.yaml  entrypoint.sh  pyproject.toml
api_backend/: Dockerfile  api_activation.py
config/: config.yaml
data/docs/149/: clean.md
data/docs/152/: clean.md
dataset/: __init__.py  config.py  make_answers.py  make_metric.py  merge_dataset.py  qa_generation.py
dataset/config/: config.yaml
dataset/data/: qa_dataset.csv  qa_dataset.pkl  results.csv
dataset/data/answers/: answers_blank.pkl  answers_full.pkl  answers_naive.pkl  answers_triplets.pkl
docs/: 149fz.htm  149fz_clean.md  neo4j_server.txt
docs/149/: parsed.md
docs/152/: clean.md  parsed.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
law_rag/: __init__.py  build_graph.py  config.py  holmes_build_graph.py
law_rag/dataset/: __init__.py  qa_generation.py
law_rag/db_manager/: __init__.py  data_management.py
law_rag/documents/: __init__.py  common.py  convert_pdf.py  md_parser.py
law_rag/knowledge/: __init__.py  commands.py  db_connection.py  graph_building.py  node_schema.py  triplets_generation.py
law_rag/models/: __init__.py  blanks.py  embeddings_wrapper.py  llm_wrapper.py
law_rag/neo4j/: __init__.py  commands.py  db_connection.py  graph_building.py  node_schema.py
